--- a/PayrollSystem/PayrollSystem/ClientApp/src/App.css
+++ b/PayrollSystem/PayrollSystem/ClientApp/src/App.css
@@ -55,8 +55,22 @@ body, html, .App, #root, .outer {
     width: 100%;
     height: 100%;
 }
-
-
+ /*Register page*/
+.list-group.list-group-flush {
+    background-Color: transparent;
+}
+.list-group.list-group-flush .list-group-item{
+    background-Color: transparent;
+    text-align: center;
+}
+.list-group.list-group-flush .list-group-item .btn.btn-danger
+{
+   width: 350px;;
+}
+.list-group.list-group-flush .list-group-item .btn.btn-success
+{
+   width: 350px;;
+}
 /* sidebar */
 #sidebar .user .navbar .content-parent{
     height: 0px;
@@ -296,4 +310,5 @@ div.main-panel {
     #sidebarCollapse span {
         display: none;
     }
+    
 }
