[Huytq] fix narbar & sidebar

--- a/PayrollSystem/PayrollSystem/ClientApp/src/assets/css/App.css
+++ b/PayrollSystem/PayrollSystem/ClientApp/src/assets/css/App.css
@@ -25,20 +25,20 @@ a:focus {
     transition: all 0.3s;
 }
 
-.navbar {
+/*.navbar {
     padding: 15px 10px;
     background: #fff;
     border: none;
     border-radius: 0;
     margin-bottom: 40px;
     box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
-}
+}*/
 
-.navbar-btn {
+/*.navbar-btn {
     box-shadow: none;
     outline: none !important;
     border: none;
-}
+}*/
 
 .line {
     width: 100%;
@@ -47,11 +47,11 @@ a:focus {
     margin: 40px 0;
 }
 
-i,
+/*i,
 span {
     display: inline-block;
-}
-body, html, .App, #root, .outer {
+}*/
+body, html, .App, #root {
     width: 100%;
     height: 100%;
 }
@@ -72,7 +72,7 @@ body, html, .App, #root, .outer {
    width: 350px;;
 }
 /* sidebar */
-#sidebar .user .navbar .content-parent{
+/*#sidebar .user .navbar .content-parent{
     height: 0px;
     overflow: hidden;
     transition: height ease 1s;
@@ -241,7 +241,7 @@ a.article,
 a.article:hover {
     background: #6d7fcc !important;
     color: #fff !important;
-}
+}*/
 
 /* ---------------------------------------------------
     CONTENT STYLE
