--- a/PayrollSystem/PayrollSystem/ClientApp/src/assets/css/App.css
+++ b/PayrollSystem/PayrollSystem/ClientApp/src/assets/css/App.css
@@ -6,9 +6,9 @@ body {
     min-height: 100vh;
     display: flex;
     font-weight: 400;
-    font-family:'position', sans-serif;
-    background: #fafafa;
-    }
+    font-family: 'position', sans-serif;
+}
+
 p {
     font-family: 'Poppins', sans-serif;
     font-size: 1.1em;
@@ -25,20 +25,20 @@ a:focus {
     transition: all 0.3s;
 }
 
-/*.navbar {
-    padding: 15px 10px;
-    background: #fff;
+.navbar {
+    padding: 18px 10px;
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.6) 0%,rgba(0,0,0,0.6) 90%), url("../img/background.jpg");
     border: none;
     border-radius: 0;
-    margin-bottom: 40px;
+    margin-bottom: 25px;
     box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
-}*/
+}
 
-/*.navbar-btn {
+.navbar-btn {
     box-shadow: none;
     outline: none !important;
-    border: none;
-}*/
+    border: none
+}
 
 .line {
     width: 100%;
@@ -55,59 +55,74 @@ body, html, .App, #root {
     width: 100%;
     height: 100%;
 }
- /*Register page*/
+/*Register page*/
 .list-group.list-group-flush {
     background-Color: transparent;
 }
-.list-group.list-group-flush .list-group-item{
-    background-Color: transparent;
-    text-align: center;
-}
-.list-group.list-group-flush .list-group-item .btn.btn-danger
-{
-   width: 350px;;
-}
-.list-group.list-group-flush .list-group-item .btn.btn-success
-{
-   width: 350px;;
-}
+
+    .list-group.list-group-flush .list-group-item {
+        background-Color: transparent;
+        text-align: left;
+        font-size: 16px;
+    }
+
+        .list-group.list-group-flush .list-group-item .btn.btn-danger {
+            width: 350px;
+            ;
+        }
+
+        .list-group.list-group-flush .list-group-item .btn.btn-success {
+            width: 350px;
+            ;
+        }
 /* sidebar */
-/*#sidebar .user .navbar .content-parent{
+#sidebar .user .navbar .content-parent {
     height: 0px;
     overflow: hidden;
     transition: height ease 1s;
 }
-#sidebar .user .navbar .content-parent.show{
-    height: auto;
-}
+
+    #sidebar .user .navbar .content-parent.show {
+        height: auto;
+    }
+
 #sidebar .user div.navbar a {
     float: left;
+    font-size: 16px;
 }
+
 .arrow {
     border: solid black;
     border-width: 0 3px 3px 0;
     margin-left: 5px;
     display: inline-block;
     padding: 2px;
-  }
-  .down {
+}
+
+.down {
     transform: rotate(45deg);
     -webkit-transform: rotate(45deg);
-  }
-  #sidebar .list-group .list-group-item{
-    background: #7386D5;
-  }
-#sidebar .user div.navbar{
-    background: #7386D5;
+}
+
+#sidebar .list-group .list-group-item {
+    background-Color: transparent;
+    font-size: 18px;
+}
+
+#sidebar .user div.navbar {
+    font-size: 16px;
+    background-Color: transparent;
     margin: 0px;
     border: 0px;
 }
+
 .avatar {
     vertical-align: middle;
     width: 50px;
     height: 50px;
     border-radius: 50%;
-  }
+}
+
 .wrapper {
     display: flex;
     align-items: stretch;
@@ -116,91 +131,91 @@ body, html, .App, #root {
 #sidebar {
     min-width: 250px;
     max-width: 250px;
-    background: #7386D5;
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.6) 0%,rgba(0,0,0,0.6) 90%), url("../img/background.jpg");
     color: #fff;
     transition: all 0.3s;
 }
 
-#sidebar.active {
-    min-width: 80px;
-    max-width: 80px;
-    text-align: center;
-}
+    #sidebar.active {
+        min-width: 80px;
+        max-width: 80px;
+        text-align: center;
+    }
 
-#sidebar.active .sidebar-header h3,
-#sidebar.active .CTAs {
-    display: none;
-}
+        #sidebar.active .sidebar-header h3,
+        #sidebar.active .ctas {
+            display: none;
+        }
 
-#sidebar.active .sidebar-header strong {
-    display: block;
-}
+        #sidebar.active .sidebar-header strong {
+            display: block;
+        }
 
-#sidebar ul li a {
-    text-align: left;
-}
+    #sidebar ul li a {
+        text-align: left;
+    }
 
-#sidebar.active ul li a {
-    padding: 20px 10px;
-    text-align: center;
-    font-size: 0.85em;
-}
+    #sidebar.active ul li a {
+        padding: 20px 10px;
+        text-align: center;
+        font-size: 0.85em;
+    }
 
-#sidebar.active ul li a i {
-    margin-right: 0;
-    display: block;
-    font-size: 1.8em;
-    margin-bottom: 5px;
-}
+        #sidebar.active ul li a i {
+            margin-right: 0;
+            display: block;
+            font-size: 1.8em;
+            margin-bottom: 5px;
+        }
 
-#sidebar.active ul ul a {
-    padding: 10px !important;
-}
+    #sidebar.active ul ul a {
+        padding: 10px !important;
+    }
 
-#sidebar.active .dropdown-toggle::after {
-    top: auto;
-    bottom: 10px;
-    right: 50%;
-    -webkit-transform: translateX(50%);
-    -ms-transform: translateX(50%);
-    transform: translateX(50%);
-}
+    #sidebar.active .dropdown-toggle::after {
+        top: auto;
+        bottom: 10px;
+        right: 50%;
+        -webkit-transform: translatex(50%);
+        -ms-transform: translatex(50%);
+        transform: translatex(50%);
+    }
 
-#sidebar .sidebar-header {
-    padding: 20px;
-    background: #6d7fcc;
-}
+    #sidebar .sidebar-header {
+        padding: 18px;
+        background-color: translatex;
+    }
 
-#sidebar .sidebar-header strong {
-    display: none;
-    font-size: 1.8em;
-}
+        #sidebar .sidebar-header strong {
+            display: none;
+            font-size: 1.8em;
+        }
 
-#sidebar ul.components {
-    padding: 20px 0;
-    border-bottom: 1px solid #47748b;
-}
+    #sidebar ul.components {
+        padding: 20px 0;
+        border-bottom: 1px solid #47748b;
+    }
 
-#sidebar ul li a {
-    padding: 10px;
-    font-size: 1.1em;
-    display: block;
-}
+    #sidebar ul li a {
+        padding: 10px;
+        font-size: 1.1em;
+        display: block;
+    }
 
-#sidebar ul li a:hover {
-    color: #7386D5;
-    background: #fff;
-}
+        #sidebar ul li a:hover {
+            color: #7386d5;
+            background: gray;
+        }
 
-#sidebar ul li a i {
-    margin-right: 10px;
-}
+        #sidebar ul li a i {
+            margin-right: 10px;
+        }
 
-#sidebar ul li.active>a,
-a[aria-expanded="true"] {
-    color: #fff;
-    background: #6d7fcc;
-}
+    #sidebar ul li.active > a,
+    a[aria-expanded="true"] {
+        color: #fff;
+        background: gray;
+    }
 
 a[data-toggle="collapse"] {
     position: relative;
@@ -211,7 +226,7 @@ a[data-toggle="collapse"] {
     position: absolute;
     top: 50%;
     right: 20px;
-    transform: translateY(-50%);
+    transform: translatey;
 }
 
 ul ul a {
@@ -220,41 +235,56 @@ ul ul a {
     background: #6d7fcc;
 }
 
-ul.CTAs {
+ul.ctas {
     padding: 20px;
 }
 
-ul.CTAs a {
-    text-align: center;
-    font-size: 0.9em !important;
-    display: block;
-    border-radius: 5px;
-    margin-bottom: 5px;
-}
+    ul.ctas a {
+        text-align: center;
+        font-size: 0.9em !important;
+        display: block;
+        border-radius: 5px;
+        margin-bottom: 5px;
+    }
 
 a.download {
     background: #fff;
-    color: #7386D5;
+    color: #7386d5;
 }
 
 a.article,
 a.article:hover {
     background: #6d7fcc !important;
     color: #fff !important;
-}*/
+}
+/* home */
+.home-container {
+    font-weight: bold;
+}
 
+    .home-container > h1 {
+        color: black;
+        font-size: 100px;
+        margin-top: 200;
+        text-align: center;
+    }
+
+    .home-container > p {
+        color: black;
+        font-size: 35px;
+        text-align: center;
+    }
 /* ---------------------------------------------------
     CONTENT STYLE
 ----------------------------------------------------- */
 div.main-panel {
     width: 100%;
-    padding: 20px;
     min-height: 100vh;
     transition: all 0.3s;
 }
+
 #content {
     width: 100%;
-    padding: 20px;
     min-height: 100vh;
     transition: all 0.3s;
 }
@@ -270,6 +300,7 @@ div.main-panel {
         text-align: center;
         margin-left: -80px !important;
     }
+
     .dropdown-toggle::after {
         top: auto;
         bottom: 10px;
@@ -278,37 +309,46 @@ div.main-panel {
         -ms-transform: translateX(50%);
         transform: translateX(50%);
     }
+
     #sidebar.active {
         margin-left: 0 !important;
     }
+
     #sidebar .sidebar-header h3,
     #sidebar .CTAs {
         display: none;
     }
+
     #sidebar .sidebar-header strong {
         display: block;
     }
+
     #sidebar ul li a {
         padding: 20px 10px;
     }
-    #sidebar ul li a span {
-        font-size: 0.85em;
-    }
-    #sidebar ul li a i {
-        margin-right: 0;
-        display: block;
-    }
+
+        #sidebar ul li a span {
+            font-size: 0.85em;
+        }
+
+        #sidebar ul li a i {
+            margin-right: 0;
+            display: block;
+        }
+
     #sidebar ul ul a {
         padding: 10px !important;
     }
+
     #sidebar ul li a i {
         font-size: 1.3em;
     }
+
     #sidebar {
         margin-left: 0;
     }
+
     #sidebarCollapse span {
         display: none;
     }
-    
 }
